After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729366 - Changes to folder name are not shown when creating new folder from file chooser if folder list has been scrolled prior to hitting 'Create Folder'
Changes to folder name are not shown when creating new folder from file choos...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2014-05-02 06:13 UTC by Adam Williamson
Modified: 2015-03-02 21:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screencast illustrating the issue (172.64 KB, application/octet-stream)
2014-05-02 18:53 UTC, Adam Williamson
  Details
gtkfilechooser: scroll prior to adding the 'new folder' row (1.60 KB, patch)
2015-03-02 17:47 UTC, Nelson Benitez
none Details | Review

Description Adam Williamson 2014-05-02 06:13:15 UTC
To reproduce:

1. Open a torrent file with Transmission
2. In the file chooser dialog that opens to choose where to save the file, click the "create new folder" button
3. Type a name for the new folder - note that this works, but the UI does not indicate it in any way, you are 'typing blind'

Trying to reproduce in gedit doesn't seem to work, but it seems to be 100% reproducible in Transmission. Not sure what the difference is.

Running gtk 3.13.1, but I saw this with 3.12 also.
Comment 1 Matthias Clasen 2014-05-02 11:08:10 UTC
do you have a link to a torrent file that I can use ?
Comment 2 Adam Williamson 2014-05-02 15:56:01 UTC
http://torrent.fedoraproject.org/ ? :D
Comment 3 Adam Williamson 2014-05-02 15:56:47 UTC
Huh, except, one I try from there doesn't trigger the bug. But I'm *sure* I've seen it regularly. Maybe it is to do with the torrent name / contents, sigh...I'll poke a bit more.
Comment 4 Adam Williamson 2014-05-02 15:58:44 UTC
well crap, now I can't reproduce it at all. maybe it got fixed in 3.13.1 and I had a transmission with 3.12 open before. I'll close for now and re-open if I find a way to reproduce...
Comment 5 Matthias Clasen 2014-05-02 16:40:22 UTC
thanks, adam
Comment 6 Adam Williamson 2014-05-02 18:46:33 UTC
Aha! So thanks to an idea of mclasen's, I found the reproducer.

The difference is whether the folder list has been scrolled or not before you hit "Create Folder".

If the folder list has not been scrolled, then the entry provisionally named "New Folder" will be created at the top, and you will see changes to the name "New Folder" as you type them.

If the folder list has been scrolled, the entry provisionally named "New Folder" will be created at the top, and GTK+ knows to automatically 'jump' back to the top of the folder list so you can see the changes to the name as you type them...but the changes don't actually show up. Something about this particular case causes the "New Folder" entry to misbehave and not show changes as they're typed.

I'll see if I can attach a couple of screencasts to illustrate.
Comment 7 Adam Williamson 2014-05-02 18:53:10 UTC
Created attachment 275691 [details]
screencast illustrating the issue

Here's a screencast illustrating the issue. I'm just saving a file in gedit. First, I create a new folder without scrolling the folder list; you can see the name of the new folder change as I type, 'test test test'. I cancel out by hitting Esc, then scroll the folder list and hit 'create folder' again. Then I type 'test test test' again, but you'll see the displayed folder name does not change. Then I hit enter and you'll see that the folder is indeed created with the name 'test test test'.
Comment 8 Adam Williamson 2014-10-10 04:47:01 UTC
This has either re-appeared or is still valid in gtk3-3.14.1-2.fc21.x86_64 (I don't recall whether it got fixed and just came back, or has been broken the whole time). Just saw it again.
Comment 9 Nelson Benitez 2015-03-02 17:47:05 UTC
Created attachment 298341 [details] [review]
gtkfilechooser: scroll prior to adding the 'new folder' row

Yes I can reproduce with gtk 3.15.4 , this patch fixes it by scrolling to the beginning of tree view before adding the 'new folder' row.
Comment 10 Matthias Clasen 2015-03-02 21:26:36 UTC
Fixed differently in 209c5c37f323c5cb2b8ae98384e0fd61a2df60f7